[gd_scene load_steps=5 format=3 uid="uid://n2hty4u6be6f"]

[ext_resource type="PackedScene" uid="uid://dkf6wxf5jt5vq" path="res://scenes/item_display.tscn" id="1_6yxlg"]
[ext_resource type="Script" uid="uid://1pmtx53hwxw2" path="res://scripts/components/physics_item.gd" id="1_xu118"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_xu118"]
friction = 0.9
bounce = 0.6

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xu118"]
size = Vector2(96, 96)

[node name="PhysicsItem" type="RigidBody2D"]
physics_material_override = SubResource("PhysicsMaterial_xu118")
gravity_scale = 2.0
lock_rotation = true
script = ExtResource("1_xu118")

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xu118")

[node name="ItemDisplay" parent="." instance=ExtResource("1_6yxlg")]

[node name="ClickHitbox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="mouse_entered" from="ClickHitbox" to="." method="_on_click_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="ClickHitbox" to="." method="_on_click_hitbox_mouse_exited"]
